<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:text="@string/daily_calories"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:layout_weight="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calories"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:text="@string/daily_exercise"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:layout_weight="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_exs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/min"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>