<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExerciseFragment">

    <LinearLayout
        android:id="@+id/ll_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TextInputLayout" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/or_type_your_exercise_here"
                android:inputType="textMultiLine"
                android:lines="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            style="@style/FilledButtonBlue"
            android:text="@string/add"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/text_rounded"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/set_your_preferences_here"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_set"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/set"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_weight="0.5" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:gravity="center"
            android:text="@string/long_press_to_delete"
            android:visibility="invisible" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/text_rounded"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_config" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        style="@style/FilledButtonBlue"
        android:text="@string/log_exercise"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_ent_items"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:text="@string/your_exercises_will_be_displayed_here"
        app:layout_constraintBottom_toBottomOf="@+id/rv_log"
        app:layout_constraintEnd_toEndOf="@+id/rv_log"
        app:layout_constraintStart_toStartOf="@+id/rv_log"
        app:layout_constraintTop_toTopOf="@+id/rv_log" />



</androidx.constraintlayout.widget.ConstraintLayout>