<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/height" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tb_group_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:checkedButton="@id/bt_met_ht"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_met_ht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/OutlinedButton"
                android:textAllCaps="false"
                android:text="@string/metric"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_imp_ht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/OutlinedButton"
                android:textAllCaps="false"
                android:text="@string/imperial"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_feet_cm"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/cm"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_feet_cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_inches"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_marginStart="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_inches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/inches"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/weight" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tb_group_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:checkedButton="@id/bt_met_wt"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_met_wt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/OutlinedButton"
                android:textAllCaps="false"
                android:text="@string/metric"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_imp_wt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/OutlinedButton"
                android:textAllCaps="false"
                android:text="@string/imperial"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_weight"
            style="@style/TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/kg"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/gender" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tb_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            app:checkedButton="@id/bt_male"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/OutlinedButton"
                android:textAllCaps="false"
                android:text="@string/male"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/OutlinedButton"
                android:textAllCaps="false"
                android:text="@string/female"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_b_day"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/birthday" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:hint="dd"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:hint="mm"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_yyyy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:hint="yyyy"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>